# qtattitude3d

qtattitude3d/: .gitignore  LICENSE  MANIFEST.in  README.md  __main__.py  pyproject.toml
qtattitude3d/core/: paths.py
qtattitude3d/demo/: __init__.py
qtattitude3d/models/: __init__.py
qtattitude3d/qtattitude3d/: __init__.py
qtattitude3d/qtattitude3d/assets/example/: materials.mtl
qtattitude3d/qtattitude3d/core/: __init__.py  runtime.py
qtattitude3d/qtattitude3d/demo/: window.py
qtattitude3d/qtattitude3d/io/: __init__.py  obj_mtl.py
qtattitude3d/qtattitude3d/models/: materials.py
qtattitude3d/qtattitude3d/widgets/: attitude.py
qtattitude3d/widgets/: __init__.py
