[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qtattitude3d-kairos"
version = "0.1.1"
authors = [
    { name = "TAYFUR", email = "tayfurcnr@gmail.com" },
]
description = "A high-performance 3D Attitude Indicator and Model Visualizer for PyQt5 applications."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["pyqt5", "3d", "visualization", "imu", "attitude", "vtk", "pyvista"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "PyQt5",
    "pyvista",
    "vtk",
]

[project.urls]
"Homepage" = "https://github.com/tayfurcnr/qtattitude3d"

[tool.setuptools.packages.find]
include = ["qtattitude3d"]
namespaces = false

[project.scripts]
qtattitude3d-demo = "qtattitude3d.demo.launcher:main"